[package]
authors = ["HactarCE"]
description = "Platform-aware keyboard key name handling for Rust applications"
repository = "https://github.com/HactarCE/key-names"
license = "MIT OR Apache-2.0"
categories = ["game-development", "gui", "internationalization", "os"]
keywords = ["keyboard", "keylayout", "keymap", "scancode", "input"]
name = "key-names"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2"
keycode = "0.3"
winit = { version = "0.26", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
thiserror = "1.0"
xkbcommon = { version = "0.4", features = ["x11", "wayland"] }
xcb = "0.9.0"
wayland-client = "0.29"
